--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <form>
                 <div>  <input type="text" placeholder="first name and last name"> </div>
                 <div>  <input type="email" placeholder="email addres"> </div>
-                <div>  <input type="number" placeholder="phone"> 
+                <div>  <input type="tel"placeholder="phone"> 
                 <div>  <input type="text" placeholder="education"> </div>
                 <div>  <input type="text" placeholder="company name"> </div>
                 <div>  <input type="text" placeholder="addres line 1"> </div>
@@ -20,16 +20,21 @@
                 </div>
                 <div>
                        <input type="text" placeholder="company No.">
-                       <di>
+                       <div>
                             <!---drop dwon-->
-                            <button>country</button>
-                       </di>                    
+                          <select  placeholder="country" name="country" id="country"> country
+                            <option value="#" >country</option>
+                            <option value="moraco" >moraco</option>
+                            <option value="us" >us</option>
+                            <option value="us" >uk</option>
+                          </select>
+                       </div>                    
                 </div>
                     <div>
                         <h3>show country on your profile and badge0</h3>
                         <input  type="radio" id="yes" name="yes" value="yes">
                         <label for="yes">yes</label>
-                        <input type="radio" id="no" name="no" value="no">
+                        <input type="radio" id="no" name="yes" value="no">
                         <label for="no">no</label>
                     </div>
             </form>
